--- a/templates/ask.html
+++ b/templates/ask.html
@@ -213,10 +213,10 @@
     <!-- Header -->
     <header>
         <img src="/static/infosys.png" alt="Logo">
-        <img src="/static/logo.png" alt="Logo">
+        <img src="/static/ABCBank.png" alt="Logo">
     </header>
     <nav>
-        <a href="/">Credit Risk Assist</a>        
+        <a href="/">Credit Risk Loan Assist</a>        
     </nav>
 
     <!-- Sidebar for Document Titles -->
