--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
         }
 
         header img {
-            height: 50px;
+            height: 75px;
             margin-right: 20px;
         }
 
@@ -89,12 +89,12 @@
 </head>
 <body>
     <header>
-        <img src="/static/infosys.png" alt="Logo" >
-        <img src="/static/logo.png" alt="Logo">
+        <img src="/static/infosys.png" alt="Logo" > 
+        <img src="/static/ABCBank.png" alt="Logo" >
         
     </header>
     <nav>
-        <a href="/">Credit Risk Assist</a>        
+        <a href="/">Credit Risk Loan Assist</a>        
     </nav>
 
     
