--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -120,7 +120,7 @@
         }
 
         .home-button {
-            position: fixed;            
+            position: relative;            
             bottom: 20px;
             left: 20px;
             background-color: #ccc;
@@ -187,7 +187,7 @@
         <h2>Summary</h2>
         <h4>{{ data['Summary'] }}</h4>
     </div>
-    
+    <br>
     <!-- Back to Home Button -->
     <a href="/" class="home-button">Back to Home</a>
 </body>
